# langgraph-learn-with-agent

./: .gitignore  CLAUDE.md  LEARNING_PLAN.md  PROGRESS.md  README.md  config.example.yaml  main.py  pyproject.toml
docs/: QUIZ_MARKDOWN_SPEC.md  README.md
docs/phase01_basics/: 01_core_concepts.md  02_api_usage.md  03_tools_and_llm.md  04_reading_source_code.md  05_complete_example.md  README.md
examples/: README.md
examples/phase01_basics/: README.md
examples/phase01_basics/demos/: 01_environment_check.py  02_simple_calculator_demo.py  03_llm_configuration_demo.py  04_real_calculator_agent_demo.py  05_config_with_pydantic_demo.py  06_create_llm_from_config_demo.py
examples/phase01_basics/exercises/: 01_first_graph_exercise.py  02_conditional_edges_exercise.py  03_calculator_agent_exercise.py
examples/phase01_basics/quizzes/: 01_basics_quiz.md  02_api_usage_quiz.md  03_review_quiz.md  04_review_multiple_choice.md  05_quiz_set1_basics.md  06_quiz_set2_api_practice.md  07_quiz_set3_comprehensive.md  README.md  TEMPLATE_QUIZ.md  answers.json
scripts/: organize_files.py
web/: app.py
web/static/css/: base.css  code.css  markdown-theme.css  theme.css
web/static/js/: navigation.js  quiz.js  theme.js
web/templates/: base.html  home.html  lecture.html  quiz_all.html  quiz_list.html  quiz_single.html
